[package]
name = "protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
bytes = "1.1.0"
tokio = { version = "1.12.0", features = ["full"] }
rsa = { path = "../rsa_lib" }
