[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0.0-beta.4"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
rsa = { path = "../rsa_lib" }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
bytes = "1.1.0"
protocol = { path = "../protocol" }
